added links to social media icons

--- a/frontend_react/src/container/Header/Header.scss
+++ b/frontend_react/src/container/Header/Header.scss
@@ -69,6 +69,10 @@
     box-shadow: 0px 0px 20px rgba(0, 0, 0, 0.1);
   }
 
+  .badge-cmp {
+    margin-top: 1rem;
+  }
+
   .tag-cmp {
     flex-direction: column;
     margin-top: 3rem;
