--- a/frontend_react/src/index.css
+++ b/frontend_react/src/index.css
@@ -4,7 +4,7 @@
   --font-base: "DM Sans", sans-serif;
 
   --primary-color: #edf2f8;
-  --secondary-color: #313bac;
+  --secondary-color: #82b06f;
   --black-color: #030303;
   --lightGray-color: #e4e4e4;
   --gray-color: #6b7688;
@@ -18,3 +18,12 @@
   margin: 0;
   scroll-behavior: smooth;
 }
+
+/* 
+--primary-color: #edf2f8;
+--secondary-color: #313bac;
+--black-color: #030303;
+--lightGray-color: #e4e4e4;
+--gray-color: #6b7688;
+--brown-color: #46364a;
+--white-color: #ffffff; */
