--- a/frontend_react/src/components/Navbar/Navbar.scss
+++ b/frontend_react/src/components/Navbar/Navbar.scss
@@ -1,11 +1,13 @@
 .app__navbar {
   width: 100%;
+
   display: flex;
   justify-content: space-between;
   align-items: center;
 
   padding: 1rem 2rem;
   background: rgba(255, 255, 255, 0.25);
+  // box-shadow: 0 8px 32px 0 rgba( 31, 38, 135, 0.37 );
   backdrop-filter: blur(4px);
   -webkit-backdrop-filter: blur(4px);
   border: 1px solid rgba(255, 255, 255, 0.18);
@@ -34,7 +36,6 @@
   display: flex;
   justify-content: center;
   align-items: center;
-
   list-style: none;
 
   li {
@@ -55,6 +56,7 @@
       color: var(--gray-color);
       text-decoration: none;
       flex-direction: column;
+
       text-transform: uppercase;
       font-weight: 500;
 
@@ -67,7 +69,7 @@
 
     &:hover {
       div {
-        color: var(--secondary-color);
+        background: var(--secondary-color);
       }
     }
   }
@@ -86,7 +88,7 @@
   display: flex;
   justify-content: center;
   align-items: center;
-  background: var(--secondary-color);
+  background-color: var(--secondary-color);
 
   svg {
     width: 70%;
@@ -116,7 +118,8 @@
     background-size: cover;
     background-repeat: repeat;
 
-    box-shadow: 0 0 20px rgba(168, 168, 168, 0.15);
+    /* top box shadow */
+    box-shadow: 0px 0px 20px rgba(168, 168, 168, 0.15);
 
     svg {
       width: 35px;
@@ -155,6 +158,7 @@
         }
       }
     }
+
     @media screen and (min-width: 900px) {
       display: none;
     }
